finalized styling of index page, fixed footer spacing

--- a/stylesheets/index-style.css
+++ b/stylesheets/index-style.css
@@ -1,15 +1,13 @@
 body, html {
   height: 100%;
-  font-family: 'Handlee', cursive;
+  /* font-family: 'Handlee', cursive; */
   font-weight: bold;
   font-size: 1.1em;
-  /* font-family: 'Permanent Marker', cursive;
-  font-family: 'Rock Salt', cursive; */
+  /* font-family: 'Permanent Marker', cursive;  */
+  font-family: 'Rock Salt', cursive;
 }
 
 .background {
-/* http://cms.stephaniegonot.com/media/w_800,q_90,c_limit/bvzu1tkw77upxyvrmjt6.jpg */
-
  background-image: url("https://cdn.shopify.com/s/files/1/0908/9770/products/Maria_van_Oosterwyck_-_Bouquet_of_Flowers_in_a_Vase_-_Google_Art_Project.jpg?v=1454857327");
  height: 100%;
 
@@ -23,9 +21,7 @@ body, html {
   flex-direction: row;
   justify-content: flex-end;
   align-items: center;
-
   height: 2.25em;
-
   background-color: white;
   opacity: 0.8;
 }
@@ -46,6 +42,7 @@ body, html {
   justify-content: center;
   align-items: center;
   flex-flow: wrap;
+  word-spacing: .5em;
 }
 
 .title div {
@@ -54,7 +51,7 @@ body, html {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  width: 25em;
+  width: 30em;
   height: 10em;
   background-color: white;
   opacity: 0.8;
@@ -80,8 +77,8 @@ body, html {
   flex-direction: row;
   flex-flow: wrap;
   justify-content: space-around;
-  align-content: center;
-  height: 100px;
+  align-items: center;
+  height: 300px;
 
 }
 
@@ -89,6 +86,7 @@ body, html {
   display: flex;
   justify-content: center;
   align-items: center;
+  height: 150px;
   width: 250px;
   background-color: white;
   opacity: .8;
@@ -102,15 +100,26 @@ body, html {
   font-size: 1.75em;
 }
 
-info {
-  width: 400px;
+footer {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  align-items: center;
+  justify-content: flex-start;
+  background-color: white;
+  opacity: .8;
+  height: 75px;
+  flex-flow: wrap;
 }
 
-footer {
-  grid-area: a;
-  width: 350px;
-  display: flex;
-  flex-direction: column;
+.contact-info a {
+  padding-left: 30px;
+  text-decoration: none;
+  color: black;
+  font-weight: bolder;
+  font-size: 1.25em;
+}
+
+#contact-header {
+  padding-left: 20px;
+  margin: 0;
 }
